app/templates/project-name.Website/Styles/Company/layout/_layout__header.scss
//
// <%= answers.projectName %> header
// Description:   Defines styles for the site header
//
//
// ========================================================================

.site-header {
    background-color: #333;
    color: #fff;

    .container {
        margin: 10px auto;
    }

    &__logo {
        margin-left: 20px;
        color: currentColor;
        font-size: 2rem;
        font-weight: 400;
        text-transform: uppercase;

        &:hover {
            color: currentColor;
            text-decoration: none;
        }
    }
}

